--- a/ContactUs.html
+++ b/ContactUs.html
@@ -12,8 +12,8 @@
       <nav>
         <ul>
          <li><a href="#">Shop</a></li>
-           <li><a href="#">About</a></li>
-            <li><a href="#">Contact Us</a></li>
+           <li><a href="index.html">About</a></li>
+            <li><a href="ContactUs.html">Contact Us</a></li>
          
          
           <li class="logo-container"><img src="HectyXlogo2.png" alt="HectyX Co. logo"></li>
