--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="/styles.css">
   <script src="animation.js"></script>
 </head>
 <body>
@@ -10,8 +10,8 @@
     <nav>
       <ul>
         <li><a href="#">Shop</a></li>
-        <li><a href="index.html">About</a></li>
-        <li><a href="ContactUs.html">Contact</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
         <li class="logo-container"><img src="HectyXlogo2.png" alt="Logo"></li>
       </ul>
     </nav>
@@ -28,10 +28,16 @@
 <p class="text2 appear fade-in">We offer a wide range of services, including custom PC builds, upgrades, and repairs. Our build process starts with a our website. You get to choose what parts are in your PC, if you are unsure you can always add an aditional note so we can find a part that fits your needs. We'll then carefully select the components that will give you the best performance and value for your budget. Once your build is complete, we'll thoroughly test and optimize your new PC before delivering it to you. We don't include any bloatware or uneeded programs</p>
 </div>  
 </main>
-<main class="WU">
+<main class="WWHY">
   <div class="text-box3">
 <h1  class="header3 appear fade-in">We are willing to help you</h1>
 <p class="text3 appear fade-in">We pride ourselves on our attention to detail and customer satisfaction. We're always available to answer your questions and provide support, whether you're just starting your research or you need help troubleshooting an issue. We believe that building a PC should be an enjoyable and rewarding experience, and we're here to make sure that it is.</p>
+</div>  
+</main>
+<main class="WU">
+  <div class="text-box4">
+<h1  class="header4 appear fade-in">What We Aim For</h1>
+<p class="text4 appear fade-in">At our PC building company, we aim to provide affordable, high-performance gaming PCs to those who may not have the means to purchase expensive, pre-built machines. We understand that gaming is not just a hobby but a passion for many and access to a powerful gaming rig is a crucial aspect of getting the most out of your gaming experience. We want to bridge the gap by offering custom-built gaming PCs at a price point that is accessible to a wider range of people. Our goal is to empower gamers to reach their full potential by providing them with the tools to run the latest games at their highest settings and with smooth frame rates. We strive to provide not only affordable gaming PCs, but also the support and service that ensures our customers get the most out of their purchase. With our help, everyone can have access to a powerful gaming rig that will take their gaming experience to the next level.</p>
 </div>  
 </main>
 <footer>
