--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <nav>
       <ul>
         <li><a href="#">Shop</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="Index.html">About</a></li>
+        <li><a href="ContactUs.html">Contact</a></li>
         <li class="logo-container"><img src="HectyXlogo2.png" alt="Logo"></li>
       </ul>
     </nav>
