--- a/ContactUs.html
+++ b/ContactUs.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Contact Us - HectyX Co.</title>
-  <link rel="stylesheet" type="text/css" href="contact.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <script src="./Footer.JS"></script>
   <script src="./animations.js"></script>
 </head>
