--- a/ContactUs.html
+++ b/ContactUs.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Contact Us - HectyX Co.</title>
-  <link rel="stylesheet" type="text/css" href="/contact.css">
+  <link rel="stylesheet" type="text/css" href="contact.css">
   <script src="./Footer.JS"></script>
   <script src="./animations.js"></script>
 </head>
@@ -37,6 +37,7 @@
         <textarea rows="30"id="message" name="message" required></textarea>
         <input type="submit" value="Send">
       </form>
+      
     </div>
     </main>
     <footer>
