--- a/ContactUs.html
+++ b/ContactUs.html
@@ -24,7 +24,7 @@
         <div class="contact-form">
       <h1>Contact Us</h1>
       <div class="contact-info">
-        <p>Email: <a href="mailto:hectyx.business@gmail.com">hectyx.business@gmail.com</a></p>
+        <p>Email: <a href="mailto:hectyxcorp@hectyx.ga">hectyxcorp@hectyx.ga</a></p>
         <p>Phone: ‪(520) 261-7258‬</p>
         <p>Address: 175 W Valencia Rd, Arizona, Tuscon</p>
       </div>
