--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="#">Shop</a></li>
         <li><a href="Index.html">About</a></li>
         <li><a href="ContactUs.html">Contact</a></li>
-        <li class="logo-container"><img src="HectyXlogo2.png" alt="Logo"></li>
+        <li class="logo-container"><a <img src="HectyXlogo2.png" alt="Logo"></a></li>
       </ul>
     </nav>
   </header>
@@ -22,6 +22,7 @@
         <div class="text-box">
     <h1  class="appear fade-in">About Us!</h1>
     <p class="text appear fade-in">At HectyX Gaming PCs, we're passionate about building high-performance and budget custom PCs for gamers and enthusiasts. We believe that everyone should have access to a powerful and reliable computer, and we're dedicated to making that a reality. We are dedicated to providing the best possible service and support to our users.</p>
+          <li class="logo-container"><img src="GGamer.jpeg" alt="Logo"></li>
     </div>  
 </main>
 <main class="WWA">
