--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="text-box">
     <h1  class="appear fade-in">About Us!</h1>
     <p class="text appear fade-in">At HectyX Gaming PCs, we're passionate about building high-performance and budget custom PCs for gamers and enthusiasts. We believe that everyone should have access to a powerful and reliable computer, and we're dedicated to making that a reality. We are dedicated to providing the best possible service and support to our users.</p>
-          <li class="logo-container"><img src="GGamer.jpeg" alt="Logo"></li>
+          <li class="logo-about"><img src="GGamer.jpg" alt="about"></li>
     </div>  
 </main>
 <main class="WWA">
