--- a/ContactUs.html
+++ b/ContactUs.html
@@ -26,7 +26,7 @@
       <div class="contact-info">
         <p>Email: <a href="mailto:hectyxcorp@hectyx.ga">hectyxcorp@hectyx.ga</a></p>
         <p>Phone: ‪(520) 261-7258‬</p>
-        <p>Address: 175 W Valencia Rd, Arizona, Tuscon</p>
+        <p>Address: 175 W Valencia Rd, Arizona, Tucson</p>
       </div>
       <form action="submit-form.php" method="post">
         <label for="name">Name:</label>
